--- a/excalidraw-app/package.json
+++ b/excalidraw-app/package.json
@@ -27,7 +27,9 @@
   },
   "dependencies": {
     "@excalidraw/random-username": "1.0.0",
+    "@googleapis/drive": "19.2.0",
     "@sentry/browser": "9.0.1",
+    "better-auth": "^1.0.0",
     "callsites": "4.2.0",
     "firebase": "11.3.1",
     "i18next-browser-languagedetector": "6.1.4",
